<?xml version="1.0"?>
<package format="2">
  <name>cloud_seg_evaluation</name>
  <version>0.0.0</version>
  <description>The cloud_seg_evaluation package</description>

  <maintainer email="user@todo.todo">user</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <test_depend>rostest</test_depend>
  <test_depend>roslint</test_depend>

  <export>
  </export>
</package>
